# prompt-generator

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  capture_all.py  capture_eval.py  package.json  pyproject.toml  reflect.py  run_evals.py  test_capture_all.py  test_capture_eval.py  test_reflect.py  test_run_evals.py
.cursor/: BUGBOT.md
.github/: copilot-instructions.md  pull_request_template.md
.github/scripts/: sync_ai_rules.py
.github/workflows/: claude.yml  conventional-pull-request-title.yml  push-smoke.yml  release-please.yml
config/: capture_runtime.py  eval_runner.py  test_capture_runtime.py  test_eval_runner.py
data/prompts/: PROVENANCE.md  eval-agent-prompt-1-output.txt  eval-agent-prompt-2-output.txt  eval-agent-prompt-3-output.txt  eval-agent-prompt-4-output.txt  eval-agent-prompt-5-output.txt  eval-agent-prompt-6-output.txt  eval-pmax-1-output.txt  eval-pmax-2-output.txt  eval-pmax-3-output.txt  eval-pmax-4-output.txt  eval-pmax-5-output.txt  eval-pmax-6-output.txt  eval-pmax-7-output.txt  eval-pmid-1-output.txt  eval-pmid-2-output.txt  eval-pmid-3-output.txt  eval-pmid-4-output.txt  eval-pmin-1-output.txt  eval-pmin-2-output.txt  eval-pmin-3-output.txt  eval-pmin-4-output.txt  eval-pmin-5-output.txt  eval-pmin-6-output.txt  eval-pmin-7-output.txt  eval-pmin-8-output.txt  eval-prompt-generator-10-output.txt  eval-prompt-generator-13-output.txt  eval-prompt-generator-16-output.txt  eval-prompt-generator-2-output.txt  eval-prompt-generator-3-output.txt  (+1 more)
hooks/: HOOK_SPECS_PROMPT_WORKFLOW.md
rules/: prompt-workflow-context-controls.md
(+51 files in other folders)
