[project]
name = "prompt-generator-dev"
version = "0.1.0"
description = "Dev tooling for the @jl-cmd/prompt-generator npm package: eval harness and reflection scripts."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "litellm>=1.50.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["run_evals", "reflect"]
